rke2-manifest/04-longhorn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
